--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <span class="c">さくら夜</span>
     </h2>
     <p class="nobr">
-        ガジェクラ<wbr>やってたり、<wbr>ノベルゲーや<wbr>音ゲーを<wbr>プレイ<wbr>したり<wbr>カラオケ<wbr>したり<wbr>してる<wbr>ネットワーク学科の<wbr>ゆるふわ<wbr>初心者な<wbr>学生です。<br>
+        ガジェクラやってたり、<wbr>
+        ノベルゲーや音ゲーをプレイ<wbr>したり<wbr>
+        カラオケしたりしてる<wbr>
+        ネットワーク学科のゆるふわ<wbr>
+        初心者な<wbr>学生です。<br>
         <a href="https://www.maniackers.club">
             MANICKERS
         </a>所属。
@@ -36,30 +40,36 @@
     <h2>
         Products
     </h2>
-    <a href="https://kcgfreeroom.netlify.com">
-        KCG空き教室<wbr>リアルタイム<wbr>表示システム
-    </a><br>
-    <a href="html/bitratecalc.html">
-        ビットレート計算機
-    </a><br>
-    <a href="https://nanoha-karaoke-search.netlify.com/">
-        機種別<wbr>なのは<wbr>楽曲<wbr>リスト<wbr>表示システム
-    </a>
+    <p class="nobr c">
+        <a href="https://kcgfreeroom.netlify.com">
+            KCG空き教室<wbr>リアルタイム<wbr>表示システム
+        </a><br>
+        <a href="html/bitratecalc.html">
+            ビットレート計算機
+        </a><br>
+        <a href="https://nanoha-karaoke-search.netlify.com/">
+            機種別<wbr>なのは<wbr>楽曲<wbr>リスト<wbr>表示システム
+        </a>
+    </p>
         <h2>
             Favorite Characters
         </h2>
         <ul class="nobr">
-            <li><a href="http://sagaplanets.product.co.jp/works/hatuyuki/char.htm#yr">
-                    あずま夜|<wbr>はつゆき<wbr>さくら
-                </a></li>
             <li>
-                八神はやて|<wbr>魔法少女リリカル☆<wbr>なのは
+                <a href="http://sagaplanets.product.co.jp/works/hatuyuki/char.htm#yr">
+                    あずま夜|<wbr>はつゆき<wbr>さくら
+                </a>
             </li>
             <li>
                 ヴィータ|<wbr>魔法少女リリカル☆<wbr>なのは
             </li>
+            <li>
+                八神はやて|<wbr>魔法少女リリカル☆<wbr>なのは
+            </li>
         </ul>
-        <h2><img src="https://chunithm-net.com/mobile/img/b67816a78e0ed85d.png" alt="八神はやて"></h2>
+        <h2>
+            <img src="https://chunithm-net.com/mobile/img/b67816a78e0ed85d.png" alt="八神はやて">
+        </h2>
         <h2>
             好きな作品
         </h2>
@@ -113,10 +123,20 @@
         <h2>
             Accounts
         </h2>
-        <a href="https://twitter.com/kk16p586">さくら夜 | Twitter</a><br>
-        <a href="https://github.com/sakurayoru">さくら夜 | GitHub</a><br>
-        <a href="https://deresute.me/873623620">さくら夜 | deresute.me</a><br>
-        <a href="https://steamcommunity.com/id/sakuyoru2000/">さくら夜 | STEAM</a>
+        <p class="c">
+            <a href="https://twitter.com/kk16p586">
+                さくら夜 | Twitter
+            </a><br>
+            <a href="https://github.com/sakurayoru">
+                さくら夜 | GitHub
+            </a><br>
+            <a href="https://deresute.me/873623620">
+                さくら夜 | deresute.me
+            </a><br>
+            <a href="https://steamcommunity.com/id/sakuyoru2000/">
+                さくら夜 | STEAM
+            </a>
+        </p>
         <h2>
             所持機材について
         </h2>
@@ -126,8 +146,6 @@
         <ul>
             <li>SONY Xperia XZ1 Compat SO-02K</li>
             <li>Apple Mac Book Pro 16" Late2019(i7-9750H,SSD1000GB,RAM32GB)</li>
-            <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro Education 1903)</li>
-            <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro 1903)</li>
             <li>Apple iPhone 7(128GB,RoseGold)</li>
             <li>Apple iPad mini(2019,Wi-Fi,256GB,Space Gray)</li>
             <li>HUAWEI Speed Wi-Fi Next W05(ijmio Type-A)</li>
@@ -141,8 +159,10 @@
         <ul>
             <li>LG V20 PRO L-01J</li>
             <li>Lenovo ThinkPad T480s(Windows 10 Pro 1909,i7-8550U,RAM24GB,SSD1000GB)</li>
+            <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro Education 1909)</li>
+            <li>富士通 ArrowsTab Q506/ME(Windows 10 Pro 1909)</li>
             <li>SONY Xperia Z Ultla SOL24</li>
-            <li>SHARP AQUOS ZETA SH-01H(SIMロック解除済み)</li>
+            <li>SHARP AQUOS ZETA SH-01H</li>
             <li>Apple iPad mini 2(Wi-Fi,32GB,Silver)</li>
             <li>ASUS Nexus 7(2013,Wi-Fi,32GB,White)</li>
             <li>Amazon Kindle Fire HD8(2017,16GB)</li>
@@ -170,5 +190,4 @@
             <li>マウスコンピュータ MADOSMA Q501HW</li>
         </ul>
 </body>
-
 </html>
