--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <ul class="nobr">
             <li>
                 <a href="http://sagaplanets.product.co.jp/works/hatuyuki/char.htm#yr">
-                    あずま夜|<wbr>はつゆき<wbr>さくら
+                    あずま夜 | はつゆきさくら
                 </a>
             </li>
             <li>
-                ヴィータ|<wbr>魔法少女リリカル☆<wbr>なのは
+                ヴィータ | 魔法少女リリカル☆なのは
             </li>
             <li>
-                八神はやて|<wbr>魔法少女リリカル☆<wbr>なのは
+                八神はやて | 魔法少女リリカル☆なのは
             </li>
         </ul>
         <h2>
@@ -76,27 +76,27 @@
         <ul class="nobr">
             <li>
                 <a href="https://colopl.co.jp/magicianwiz/">
-                    魔法使いと<wbr>黒猫の<wbr>ウィズ
+                    魔法使いと黒猫のウィズ
                 </a>
             </li>
             <li>
                 <a href="http://www.corocoro.tv/pokesp/">
-                    ポケットモンスター <wbr>SPECIAL
+                    ポケットモンスター SPECIAL
                 </a>
             </li>
             <li>
                 <a href="http://www.nanoha.com/">
-                    魔法少女リリカル<wbr>なのは
+                    魔法少女リリカル☆なのは
                 </a>
             </li>
             <li>
                 <a href="http://sagaplanets.product.co.jp/works/hatuyuki/">
-                    はつゆき<wbr>さくら
+                    はつゆきさくら
                 </a>
             </li>
             <li>
                 <a href="http://sagaplanets.product.co.jp/works/hanasaki/">
-                    花咲<wbr>ワークスプリング!
+                    花咲ワークスプリング!
                 </a>
             </li>
             <li>
